Fixed footer problem

--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -32,7 +32,7 @@
         <dd th:text="${users.birthday}"></dd>
         <dt>Email</dt>
         <dd th:text="${users.email}"></dd>
-        <dt>Indirizzo di Spedizione</dt>
+        <dt>Indirizzo di Spedizione/Fatturazione</dt>
         <dd th:text="${users.address}"></dd>
     </dl>
 
