--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -7,11 +7,14 @@
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Footer</title>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
+<div class="container flex-grow-1">
+</div>
 
-<footer class="text-center text-dark" style="background-color: #F8F9FA;">
-    <div class="container">
-        <p class="navbar-brand fw-bold" th:href="@{/}">@2023<b> Game</b><span style="color: green">Spring</span> All
+<footer class="text-center text-dark " style="background-color: #F8F9FA;">
+    <div class="container ">
+        <p class="navbar-brand fw-bold" th:href="@{/}">Copyright @ 2023 Game<span style="color: green">Spring </span>-
+            All
             rights
             reserved</p>
     </div>
