--- a/src/main/resources/templates/purchase.html
+++ b/src/main/resources/templates/purchase.html
@@ -20,7 +20,7 @@
 
 
         <div class="form-group col-4">
-            <label for="selectedUser">Conferma l'indirizzo di spedizione:</label>
+            <label for="selectedUser">Conferma l'indirizzo di spedizione o fatturazione:</label>
             <select class="form-control" id="selectedUser" name="selectedUser">
                 <option th:each="user : ${users}" th:value="${user.id}"
                         th:text="${user.address}"></option>
